<resources>
    <string name="app_name">may2905</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="amount">amount</string>
    <string name="value">value</string>
    <string name="nameDetail">NAME</string>
    <string name="descriptionDetail">DESCRIPTION</string>
    <string name="amountDetail">AMOUNT</string>
    <string name="valueDetail">VALUE</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>