<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal_700"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/imageView_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_launcher"
        android:layout_width="wrap_content"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_name"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
        android:textSize="24sp"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/textView_name"
        android:id="@+id/textView_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/description"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_amount"
        app:layout_constraintTop_toBottomOf="@+id/textView_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_value"
        android:layout_marginTop="10dp"
        android:text="@string/value"
        app:layout_constraintTop_toBottomOf="@+id/textView_amount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>